# Motif

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Motif.cpp  Motif.h
include/common/: CommonsInit.h  FileManager.h  Logger.h  MyPath.h  Public.h
include/common/src/: CommonsInit.cpp  Entity.cpp  FileManager.cpp  Logger.cpp  MyPath.cpp
include/core/: MyDrWav.h  MyEigen.h  MyFFT.h  MyFfmpeg.h
include/core/src/: MyDrWav.cpp  MyEigen.cpp  MyFFT.cpp  MyFfmpeg.cpp
